# 7segment_clock

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/modm_app/: CMakeLists.txt  main.cpp  project.xml  rtc.cpp  rtc.hpp  rtc_impl.hpp
src/modm_app/modm/: CMakeLists.txt  gdbinit  openocd.cfg
src/modm_app/modm/cmake/: ModmConfiguration.cmake
src/modm_app/modm/docs/: doxyfile.cfg  doxypress.json
src/modm_app/modm/docs/dox/: modm-architecture-assert.dox  modm-architecture-clock.dox  modm-architecture-delay.dox  modm-architecture-gpio.dox  modm-board-nucleo-f767zi.dox  modm-board.dox  modm-build-cmake.dox  modm-build.dox  modm-cmsis-core.dox  modm-cmsis-device.dox  modm-cmsis.dox  modm-container.dox  modm-crashcatcher.dox  modm-docs.dox  modm-driver-cycle-counter.dox  modm-driver-max7219.dox  modm-ide-vscode.dox  modm-ide.dox  modm-io.dox  modm-math-algorithm.dox  modm-math-units.dox  modm-platform-clock.dox  modm-platform-core.dox  modm-platform-cortex-m.dox  modm-platform-gpio.dox  modm-platform-uart-3.dox  modm-platform-uart.dox  modm-printf.dox  modm-processing-resumable.dox  modm-stdc--.dox  modm-stdc.dox  modm-ui-color.dox  modm-ui-display.dox  modm-ui.dox
src/modm_app/modm/ext/crashcatcher/include/: CrashCatcher.h
src/modm_app/modm/ext/crashcatcher/src/: CrashCatcher.c
src/modm_app/modm/ext/gcc/: atomic.cpp  cxxabi.cpp  modm_atomic.hpp
src/modm_app/modm/link/: linkerscript.ld
src/modm_app/modm/src/modm/: math.hpp  platform.hpp  processing.hpp
src/modm_app/modm/src/modm/architecture/: interface.hpp
(+31 files in other folders)
